# RenderEngine

./: .gitignore  CMakeLists.txt  main.cpp  resources.json  simple_draw_main.cpp
headers/lib/: re_typedefs.h  render_engine.h  simple_draw.h  spirv_tools.h
headers/resource_lib/: resource_lib.h
headers/simple_draw/: scene2d.cppm  setters.cppm  shader_structures.cppm  simple_draw.cppm
shaders/: shaders.slang  simple_draw.slang
shaders/compiled/: shaders.spv  simple_draw.spv
src/: command_encoders.cpp  command_encoders.cppm  command_encoders.h  descriptor_pool.cpp  descriptor_pool.cppm  descriptor_pool.h  dispatchers.cpp  dispatchers.cppm  export_macro.h  image.cpp  image.cppm  image.h  render_engine.cpp  render_engine_shares.cppm  render_engine_shares.h  shader_module.cpp  shader_module.cppm  shader_module.h  spirv_desc.h  spirv_tools.cpp  spirv_tools.cppm  stb_image_impl.cpp  storage_buffer.cpp  storage_buffer.cppm  storage_buffer.h  synchronization.cpp  synchronization.cppm  synchronization.h  uid.h  vma_impl.cpp
src/resource_lib/: json_loader.cpp  resource_loader.cpp
src/simpled_draw/: scene2d.cpp  simple_draw.cpp
